# eni_codes

./: README.md
Algo/: functions.py
Guide/: __init__.py  m01_Sortie_standard.py  m02_Entrée_standard.py  m10_Bloc_Itératif_infini.py  m12_Fonctions.py  m14_Fonctions_génériques_2.py  m15_Fonctions_paramètres_par_défaut.py  m16_Fonctions_découplage_1.py  m19_Module_1.py
Guide/m20_Module_2/: lanceur.py
Guide/m21_Chaines/: m21__01_Introduction.py
Guide/m22_Listes/: m22__01_Introduction.py  m22__04_Tri.py
Guide/m24_Classes/: m24__02__exercice_1.py
Livre_1/Guide/: m03_Booleen.py  m04_Type.py  m05_Exception.py  m06_Bloc_Conditionnel_1.py  m07_Bloc_Conditionnel_2.py  m08_Conditions_avancées.py  m09_Bloc_Itératif.py  m11_JEU_guess_the_number.py  m13_Fonctions_génériques_1.py  m17_Fonctions_Découplage_2.py  m18_Fonctions_découplage_3.py
Livre_1/Types/: eratosthene.py  mersene.py  numberlist.py  uniquelist.py
Livre_1/project/: docker-compose.yml  pyproject.toml  servers.json  test.py
Livre_1/project/project/: MANIFEST.in  index.html  production.ini
Livre_1/project/project/project/alembic/: env.py
Livre_1/project/project/project/models/: project.py
Livre_1/project/project/project/scripts/: gtk.py  settings.py
Livre_1/project/project/project/templates/: contact.glade  layout.jinja2  mytemplate.jinja2
Livre_1/project/project/project/views/: notfound.py  project.py
Livre_1/project/project/tests/: conftest.py  test_functional.py  test_views.py
Livre_2/PDF/: 02_flux.py  (+3 more)
Metaclasses/: exemple_metaclass.py
Types/: deque.py  tuples.py
project/: Dockerfile
(+162 files in other folders)
